# minimal-gtest-autotools

./: COPYING  Makefile.am  README  configure.ac
src/: Makefile.am  main.cpp
tests/: Makefile.am
tests/gtest/: Makefile.am
